--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <title>Beat Meat - The Ultimate Punching Game</title>
+    <title>YEAH BOI YOU BEAT THAT MEAT</title>
     <style>
       body { touch-action: manipulation; }
     </style>
